[package]
authors = ["Williammuji Wong <williammuji@gmail.com>"]
name = "muduo-rust"
version = "0.1.0"
edition = "2018"
publish = false


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0" }
chrono = "0.4.19"
bytes = "1.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
substring = "1.4.5"
sudoku = "0.7.0"
rand = "0.8.4"
circular-queue = "0.2.6"
lazy_static = "1.4.0"
http = "0.2.6"
sysinfo = "0.23.2"
httpdate = "1.0.2"
httparse = "1.6.0"
plotters = "0.3.1"
image = "0.24.0"
resolve = "0.2"
clap = { version = "3.1.2", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
superslice = "0.1"
async-trait = "0.1.53"


[build-dependencies]
tonic-build = "0.7"


[[bin]]
name = "nqueens-server"
path = "src/bin/nqueens/server.rs"

[[bin]]
name = "nqueens-client"
path = "src/bin/nqueens/client.rs"

[[bin]]
name = "median-sorter"
path = "src/bin/median/sorter.rs"

[[bin]]
name = "median-collector"
path = "src/bin/median/collector.rs"
