[package]
authors = ["Williammuji Wong <williammuji@gmail.com>"]
name = "muduo-rust"
version = "0.1.0"
edition = "2018"
publish = false


[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0" }
chrono = "0.4.19"
bytes = "1.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
substring = "1.4.5"
sudoku = "0.7.0"
rand = "0.8.4"
circular-queue = "0.2.6"
lazy_static = "1.4.0"
http = "0.2.6"
sysinfo = "0.23.2"
httpdate = "1.0.2"
httparse = "1.6.0"
plotters = "0.3.1"
image = "0.24.0"
resolve = "0.2"
clap = { version = "3.1.2", features = ["derive"] }
tonic = "0.7"
prost = "0.10"
superslice = "0.1"
async-trait = "0.1.53"
hyper = "0.14"
md-5 = "0.10.1"
hex = "0.4"
dns-lookup = "1.0.8"
curl = "0.4.43"
tower = { version = "0.4" }

[build-dependencies]
tonic-build = "0.7"


[[bin]]
name = "nqueens-server"
path = "src/bin/nqueens/server.rs"

[[bin]]
name = "nqueens-client"
path = "src/bin/nqueens/client.rs"

[[bin]]
name = "median-sorter"
path = "src/bin/median/sorter.rs"

[[bin]]
name = "median-collector"
path = "src/bin/median/collector.rs"

[[bin]]
name = "wordfreq"
path = "src/bin/wordfreq/wordfreq.rs"

[[bin]]
name = "control"
path = "src/bin/wordfreq/control.rs"

[[bin]]
name = "hasher"
path = "src/bin/wordfreq/hasher.rs"

[[bin]]
name = "receiver"
path = "src/bin/wordfreq/receiver.rs"

[[bin]]
name = "shorturl"
path = "src/bin/shorturl/shorturl.rs"

[[bin]]
name = "filetransfer"
path = "src/bin/filetransfer/filetransfer.rs"

[[bin]]
name = "download"
path = "src/bin/filetransfer/download.rs"

[[bin]]
name = "fastcgi"
path = "src/bin/fastcgi/main.rs"

[[bin]]
name = "ttcp"
path = "src/bin/ace/ttcp.rs"

[[bin]]
name = "ace-server"
path = "src/bin/ace/server.rs"

[[bin]]
name = "ace-client"
path = "src/bin/ace/client.rs"

[[bin]]
name = "asio-server"
path = "src/bin/asio/server.rs"

[[bin]]
name = "asio-client"
path = "src/bin/asio/client.rs"

[[bin]]
name = "mcurl"
path = "src/bin/curl/mcurl.rs"

[[bin]]
name = "curl_download"
path = "src/bin/curl/download.rs"

[[bin]]
name = "demux"
path = "src/bin/multiplexer/demux.rs"

[[bin]]
name = "multiplexer"
path = "src/bin/multiplexer/multiplexer.rs"

[[bin]]
name = "pb_rpc_server"
path = "src/bin/protobuf/rpc/server.rs"

[[bin]]
name = "pb_rpc_client"
path = "src/bin/protobuf/rpc/client.rs"

[[bin]]
name = "pb_resolver_server"
path = "src/bin/protobuf/resolver/server.rs"

[[bin]]
name = "pb_resolver_client"
path = "src/bin/protobuf/resolver/client.rs"

[[bin]]
name = "pb_rpcbench_server"
path = "src/bin/protobuf/rpcbench/server.rs"

[[bin]]
name = "pb_rpcbench_client"
path = "src/bin/protobuf/rpcbench/client.rs"

[[bin]]
name = "pb_balancer_server"
path = "src/bin/protobuf/balancer/server.rs"

[[bin]]
name = "pb_balancer_client"
path = "src/bin/protobuf/balancer/client.rs"

[[bin]]
name = "pb_dynamic_balancer_server"
path = "src/bin/protobuf/dynamic_balancer/server.rs"

[[bin]]
name = "pb_dynamic_balancer_client"
path = "src/bin/protobuf/dynamic_balancer/client.rs"

[[bin]]
name = "sudoku_server"
path = "src/bin/sudoku/server.rs"

[[bin]]
name = "sudoku_client"
path = "src/bin/sudoku/client.rs"

[[bin]]
name = "sudoku_loadtest"
path = "src/bin/sudoku/loadtest.rs"
